--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 h1 {
-  color: #e6855e;
+  color: #red;
   font-size: 30px;
 
-  background-color: #f3f372;
+  background-color: #yellow;
   
   
   height: 80px;
