--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,11 @@
 P{
-  color: #red;
+  color: #FF0000;
+  
   font-size: 30px;
 
-  background-color: #yellow;
+  background-color: #FF00FF;
   
-  
+
   height: 80px;
   
 
