--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,13 @@
 P{
-  color: #FF0000;
+  font-size: 30px;
   
+  color: #FF0000;
   
   height: 80px;
   
-
   width: 200px;
   
   background-color: #FF00FF;
-
-
 }
 
 img {
